F2-1: swagger and mocks updated
